# gmod_executor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: gmod.hpp
include/lua/: lua.hpp
include/sdk/: CLuaShared.hpp  get_interface.hpp  lua_interface.hpp  lua_shared.hpp
src/dll/: main.cpp
src/injector/: main.cpp
